# bigmeans

./: .gitignore  LICENSE  README.md  bigmeans.py  bigmeans_demo.ipynb  bigmeans_demo.py
cpp/: CMakeLists.txt  README.md  bigmeans.cpp  bigmeans.hpp  demo.cpp  demo_build.sh  demo_run.sh
python/: bigmeans_demo.ipynb  bigmeans_demo.py
